--- a/playground/Cargo.toml
+++ b/playground/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+wave_function_collapse = {path = "../"}
+pad = { git = "https://github.com/Warhorst/pad.git" }
 ratatui = "0.29.0"
 color-eyre = "0.6.3"
 crossterm = "0.28.1"
