--- a/playground_appcui/Cargo.toml
+++ b/playground_appcui/Cargo.toml
@@ -4,4 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-appcui = "0.2.0"
+appcui = "0.2.1"
+wave_function_collapse = {path = "../"}
+pad = { git = "https://github.com/Warhorst/pad.git" }
