--- a/playground/Cargo.toml
+++ b/playground/Cargo.toml
@@ -3,9 +3,13 @@ name = "playground"
 version = "0.1.0"
 edition = "2024"
 
+[profile.dev]
+opt-level = 1
+
+[profile.dev.package."*"]
+opt-level = 3
+
 [dependencies]
+appcui = "0.2.1"
 wave_function_collapse = {path = "../"}
 pad = { git = "https://github.com/Warhorst/pad.git" }
-ratatui = "0.29.0"
-color-eyre = "0.6.3"
-crossterm = "0.28.1"
