Set pad version fixed to 1.0.0

--- a/playground/Cargo.toml
+++ b/playground/Cargo.toml
@@ -12,4 +12,4 @@ opt-level = 3
 [dependencies]
 appcui = "0.3.1"
 wave_function_collapse = {path = "../"}
-pad = { git = "https://github.com/Warhorst/pad.git" }
+pad = { git = "https://github.com/Warhorst/pad.git", tag = "1.0.0"}
