--- a/playground/Cargo.toml
+++ b/playground/Cargo.toml
@@ -3,13 +3,9 @@ name = "playground"
 version = "0.1.0"
 edition = "2024"
 
-[profile.dev]
-opt-level = 1
-
-[profile.dev.package."*"]
-opt-level = 3
-
 [dependencies]
-appcui = "0.3.1"
+ratatui = "0.30.0"
+crossterm = "0.29.0"
 wave_function_collapse = {path = "../"}
 pad = { git = "https://github.com/Warhorst/pad.git", tag = "1.3.0"}
+ratatui_tools = {git = "https://github.com/Warhorst/ratatui_tools.git", tag = "1.2.0"}
